--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 
 # nbproject for netbeans
 **/nbproject/
+
+# nodejs modules
 **/node_modules/
 
 # for idea
@@ -29,9 +31,9 @@
 **/obj/Debug
 **/*.sln
 
-# Plugins
+# Bower components
 **/bower_components
 
-#Mac Folder Structure
+# Mac Folder Structure
 .DS_Store
 **/.DS_Store
